--- a/index.html
+++ b/index.html
@@ -1307,8 +1307,8 @@
             try {
                 // IMPORTANT: You need to replace "YOUR_API_KEY_HERE" with your actual Google Gemini API key.
                 // Get your API key from Google AI Studio: https://aistudio.google.com/app/apikey
-                const apiKey = "YOUR_API_KEY_HERE"; 
-                if (apiKey === "YOUR_API_KEY_HERE" || apiKey === "") {
+                const apiKey = "AIzaSyBqkGz8hAovkdlxQXUoNrEyS_v1uXKCLl0"; 
+                if (apiKey === "AIzaSyBqkGz8hAovkdlxQXUoNrEyS_v1uXKCLl0" || apiKey === "") {
                     throw new Error("API Key not configured. Please replace 'YOUR_API_KEY_HERE' with your actual Gemini API key in the code.");
                 }
 
